<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/primaryTextColor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="5dp"
        android:textColor="@color/negPrimaryTextColor"
        android:text="@string/settings_theme_lite" />

    <TextView
        android:id="@+id/dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negPrimaryTextColor"
        android:textSize="15sp"
        android:padding="5dp"
        android:text="@string/settings_theme_dark" />

    <TextView
        android:id="@+id/auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negPrimaryTextColor"
        android:textSize="15sp"
        android:padding="5dp"
        android:text="@string/settings_theme_auto" />
</LinearLayout>