<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CardListActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/back_button"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:tint="@color/primaryTextColor" />

            <TextView
                android:id="@+id/whichCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_category"
                android:layout_centerInParent="true"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_regular"
               />

        </RelativeLayout>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/cardPageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTabLayout"
                app:tabTextAppearance="@style/AppTabTextAppearance"
                android:layout_gravity="top" >
                <com.google.android.material.tabs.TabItem
                    android:text="@string/category_card_pending"/>
                <com.google.android.material.tabs.TabItem
                    android:text="@string/category_card_active"/>
                <com.google.android.material.tabs.TabItem
                    android:text="@string/category_card_expire_soon"/>
                <com.google.android.material.tabs.TabItem
                    android:text="@string/category_card_expired"/>
            </com.google.android.material.tabs.TabLayout>

        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCardFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_add"
        android:layout_gravity="bottom|end">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>