<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_header"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="100dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_sub_header"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="100"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                >

                <AutoCompleteTextView
                    android:id="@+id/phoneNumber"
                    style="@style/InvisibleFocusHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_mobile_number_hint"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="?attr/primaryTextColor"
                    android:textColorHint="?attr/primaryTextColor"
                    />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/loginButton"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="?attr/disabledButton"
                android:src="@drawable/ic_arrow_forward"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login_connect_with"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/googleButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/empty_with_border"
                android:layout_marginRight="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/google"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/google" />
                    <TextView
                        android:layout_toRightOf="@+id/google"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/login_google"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="15dp" />
                </LinearLayout>



            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/facebookButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/empty_with_border"
                android:layout_marginLeft="5dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/facebook" />
                    <TextView
                        android:layout_toRightOf="@+id/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="@string/login_facebook"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/black"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="15dp" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_terms1"
                android:textColor="@color/black4"
                android:fontFamily="@font/roboto_regular"
                android:textSize="12dp" />
            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_terms2"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/base"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_terms3"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black4"
                android:textSize="12dp" />
            <TextView
                android:id="@+id/termsOfService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/login_terms4"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/base"
                android:textSize="12dp" />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/base1"
        app:layout_dodgeInsetEdges="bottom"
        android:layout_gravity="bottom|end"
        >

        <TextView
            android:id="@+id/personalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_personal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_toLeftOf="@+id/accountSwitch"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginRight="30dp"
            />

        <Switch
            android:id="@+id/accountSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SwitchTheme"
            android:layout_centerInParent="true"
             />

        <TextView
            android:id="@+id/shopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:text="@string/login_shop"
            android:textColor="@color/baseLite"
            android:textStyle="bold"
            android:textSize="18dp"
            android:fontFamily="@font/roboto_regular"
            android:layout_toRightOf="@+id/accountSwitch"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>