<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".OtpVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_header"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="100dp"/>

        <TextView
            android:id="@+id/updatePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_sub_header"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="100"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                >

                <AutoCompleteTextView
                    android:id="@+id/otp"
                    style="@style/InvisibleFocusHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp_hint"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="?attr/primaryTextColor"
                    android:textColorHint="?attr/primaryTextColor"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_auto_fetching"
                android:textColor="@color/black4"
                android:fontFamily="@font/roboto_regular"
                android:layout_alignParentStart="true"
                android:textSize="12dp" />
            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30s"
                android:textColor="@color/black4"
                android:fontFamily="@font/roboto_regular"
                android:layout_alignParentEnd="true"
                android:textSize="12dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/resentOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/otp_resend"
            android:textColor="@color/baseLite"
            android:fontFamily="@font/roboto_regular"
            android:textSize="13dp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/submit"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginRight="40dp"
        android:background="?attr/disabledButton"
        android:src="@drawable/ic_arrow_forward"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:scaleType="fitCenter"/>

</android.support.design.widget.CoordinatorLayout>