<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoShopActivity">
    <ImageView
        android:id="@+id/close"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/back_button"
        android:src="@drawable/ic_close"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:tint="@color/primaryTextColor" />
    <LinearLayout
        android:id="@+id/shopView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_shop_1"
            android:textColor="@color/primaryTextColor"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/roboto_regular"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_shop_2"
            android:textColor="@color/secTextColor"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/contactUs"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/active_button"
            android:text="@string/settings_contact_us"
            android:textColor="@color/white"
            android:scaleType="fitCenter"/>
    </LinearLayout>
</RelativeLayout>